Attemp 1: Fixing issues where desktop mode on mobile not working

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -45,9 +45,10 @@ a:hover{
 hr{
     width: 50%;
     border-color: #F0D4B3;
+    box-sizing: border-box;
     border: 3px 0 0 0;
     border-style: solid;
-
+    border-radius: 30px;
     margin: 10% auto 10% auto;
 }
 
@@ -56,13 +57,18 @@ hr{
 .TopMenu{
     height: 5%;
     padding: 4.5% 0 10px 0;
-    text-align: right;
 }
+.navi{
+    display: flex;
+    gap: 100px;
+    flex-direction: row;
+    justify-content: end;
+}
+
 .topBut {
     font-size: 130%;
     background: transparent;
     border: none;
-    margin: 0 16px 0 25px;
     color: #FDF4EA;
     position: relative;
     text-align: center;
@@ -522,14 +528,18 @@ footer{
 }
 
 @media (max-width: 992px){
+
     h1{
         font-size: 10vw;
     }
 
     .TopMenu{
-        text-align: center;
         margin-bottom: 10%;
     }
+    .navi{
+        justify-content: center;
+    }
+
     .topBanner{
         grid-template-columns: 1fr;
         text-align: center;
